--- a/package.json
+++ b/package.json
@@ -4,16 +4,33 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "",
+    "start": "webpack --watch",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "node tasks/watch.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/edames/sitecore-huebee.git"
   },
-  "author": "",
+  "author": "Ehren Dames",
   "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/edames/sitecore-huebee/issues"
   },
-  "homepage": "https://github.com/edames/sitecore-huebee#readme"
+  "homepage": "https://github.com/edames/sitecore-huebee#readme",
+  "dependencies": {
+    "huebee": "^1.0.1"
+  }, 
+  "devDependencies": {
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.4.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-plugin-transform-es2015-modules-umd": "^6.23.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "chokidar": "^1.6.1",
+    "path": "^0.12.7",
+    "webpack": "^2.2.1"
+  }
 }
