--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "sitecore-huebee",
   "version": "1.0.0",
+  "config": {
+    "unicorn": "C:/Sandbox/huebee/Data/Unicorn/",
+    "website": "C:/Sandbox/huebee/Website/"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
     "build": "",
-    "start": "webpack --watch",
+    "start": "parallelshell \"webpack --watch\" \"npm run watch\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "node tasks/watch.js"
   },
@@ -31,7 +35,11 @@
     "babel-plugin-add-module-exports": "^0.2.1",
     "chokidar": "^1.6.1",
     "css-loader": "^0.26.2",
+    "exit-hook": "^1.1.1",    
+    "parallelshell": "2.0.0",
     "path": "^0.12.7",
+    "ncp": "2.0.0",
+    "shelljs": "0.7.7",   
     "style-loader": "^0.13.2",
     "webpack": "^2.2.1"
   }
