feat: add color picker field type
Add unicorn to manage serialization for field type
Implement ColorPickerField class
Update package dependencies for Sitecore Kernel and Client for Sitecore 9

References #1

--- a/src/App_Config/Include/Sitecore.Huebee.config
+++ b/src/App_Config/Include/Sitecore.Huebee.config
@@ -2,7 +2,7 @@
   <sitecore>
     <pipelines>
       <renderContentEditor>
-        <processor type="Sitecore.Huebee.Pipelines.RenderContentEditorLoadContentEditorAssets, Sitecore.Huebee" />
+        <processor patch:before="*[1]" type="Sitecore.Huebee.Pipelines.RenderContentEditor.LoadContentEditorAssets, Sitecore.Huebee" />
       </renderContentEditor>
     </pipelines>
   </sitecore>
