--- a/src/App_Config/Include/Unicorn/Unicorn.CustomSerializationFolder.config
+++ b/src/App_Config/Include/Unicorn/Unicorn.CustomSerializationFolder.config
@@ -28,34 +28,7 @@
 				They can clobber each other's folders. You may inject the name of the current
 				configuration as a variable with $(configurationName).
 			-->
-
-			<!--
-				EXAMPLE: Per-configuration
-			-->
-			<configurations>
-				<configuration name="I Have a Custom Storage Path">
-					<targetDataStore physicalRootPath="c:\MyConfiguration" />
-				</configuration>
-			</configurations>
-
-			<!--
-				EXAMPLE: Abstract base configuration to use conventions
-			-->
-			<configurations>
-				<!-- Setup the convention using the HelixConventionVariablesReplacer (inheriting config must be named Layer.Module) -->
-				<configuration name="Helix" abstract="true">
-					<targetDataStore physicalRootPath="$(sourceFolder)\$(layer)\$(module)\serialization\$(moduleConfigName)" />
-				</configuration>
-				
-				<configuration name="Foundation.MyModule.Content" extends="Helix">
-					<!-- 
-						This configuration will now be placed at $(sourceFolder)\Foundation\MyModule\serialization\Content (variables expand at the inheriting config)
-						
-						The same trick works great on predicate paths (e.g. '/sitecore/templates/$(layer)/$(module)')
-					-->
-				</configuration>
-			</configurations>
-
+      
 			<!--
 				EXAMPLE: Change the global defaults for all configs
 			-->
@@ -66,7 +39,7 @@
 					So either place this in App_Config/Include/Unicorn, or a folder that loads after that like 'zSite'
 					-->
 				<targetDataStore>
-					<patch:attribute name="physicalRootPath">c:\path-to-source\Unicorn\$(configurationName)</patch:attribute>
+					<patch:attribute name="physicalRootPath">C:\Projects\sitecore-huebee\serialization\core</patch:attribute>
 				</targetDataStore>
 			</defaults>
 		</unicorn>
