--- a/src/App_Config/Include/Unicorn/Unicorn.Configs.Default.config
+++ b/src/App_Config/Include/Unicorn/Unicorn.Configs.Default.config
@@ -41,7 +41,7 @@
 						for example <include path="/sitecore/templates/$(layer)/$(module)" /> on the predicate. The base configuration will have 'abstract="true"' on the root element, and
 						inheritors will have 'extends="AbstractConfigName"' on their root element.
 				-->
-				<configuration name="Feature.Sample" description="Write something here about why this configuration exists and what it's for. Or remove the attribute; it's optional.">
+				<configuration name="Sitecore.Huebee" description="Sitecore Huebee Module">
 					<predicate>
 						<!--
 							PREDICATE
@@ -56,14 +56,7 @@
 							NOTE: You cannot use excludes with Transparent Sync. See https://github.com/kamsar/Unicorn/wiki/The-Transparent-Sync-Guide
 							NOTE: If your configuration is named in Helix format (Layer.Module), you can use $(layer) and $(module) here as variables.
 						-->
-						<include name="Layouts" database="master" path="/sitecore/layout/Layouts/YourSite" />
-						<include name="Templates" database="master" path="/sitecore/templates/YourSite" />
-						<include database="master" path="/sitecore/system/Languages" />
-						<include database="master" path="/sitecore/system/Tasks">
-							<exclude path="Schedules" />
-						</include>
-						<include database="master" path="/sitecore/system/Workflows" />
-						<include database="master" path="/sitecore/system/Settings" />
+            <include database="core" path="/sitecore/system/Field types/Custom Types" />
 					</predicate>
 					
 					<!--
