--- a/src/packages.config
+++ b/src/packages.config
@@ -9,7 +9,8 @@
   <package id="Rainbow.Core" version="2.0.0" targetFramework="net452" />
   <package id="Rainbow.Storage.Sc" version="2.0.0" targetFramework="net452" />
   <package id="Rainbow.Storage.Yaml" version="2.0.0" targetFramework="net452" />
-  <package id="Sitecore.Kernel.NoReferences" version="8.2.161221" targetFramework="net452" developmentDependency="true" />
+  <package id="Sitecore.Client.NoReferences" version="9.0.171219" targetFramework="net471" developmentDependency="true" />
+  <package id="Sitecore.Kernel.NoReferences" version="9.0.171219" targetFramework="net471" developmentDependency="true" />
   <package id="Unicorn" version="4.0.3" targetFramework="net452" />
   <package id="Unicorn.Core" version="4.0.3" targetFramework="net452" />
 </packages>
