--- a/package.json
+++ b/package.json
@@ -9,38 +9,39 @@
   "main": "index.js",
   "scripts": {
     "build": "",
-    "start": "parallelshell \"webpack --watch\" \"npm run watch\"",
+    "start": "parallelshell \"npm run watch\" \"npm run build:js\"",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "node tasks/watch.js"
+    "watch": "node tasks/watch.js",
+    "build:js": "webpack -w=true"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/edames/sitecore-huebee.git"
   },
   "author": "Ehren Dames",
-  "license": "GPL-3.0",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/edames/sitecore-huebee/issues"
   },
   "homepage": "https://github.com/edames/sitecore-huebee#readme",
   "dependencies": {
-    "huebee": "^1.0.1"
-  }, 
+    "huebee": "2.0.0",
+    "package": "^1.0.1"
+  },
   "devDependencies": {
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.4.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-plugin-transform-es2015-modules-umd": "^6.23.0",
-    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "chokidar": "^1.6.1",
     "css-loader": "^0.26.2",
-    "exit-hook": "^1.1.1",    
-    "parallelshell": "2.0.0",
-    "path": "^0.12.7",
+    "exit-hook": "^1.1.1",
     "ncp": "2.0.0",
-    "shelljs": "0.7.7",   
+    "parallelshell": "^3.0.2",
+    "path": "^0.12.7",
+    "shelljs": "^0.7.8",
     "style-loader": "^0.13.2",
-    "webpack": "^2.2.1"
+    "webpack": "^4.2.0",
+    "webpack-cli": "^2.0.13"
   }
 }
