feat(Configuration): add Huebee configuration
Add models to represent configuration for module
Add factory for getting configuration
Add dependency to Color Picker Field class

References #3

--- a/src/App_Config/Include/Sitecore.Huebee.config
+++ b/src/App_Config/Include/Sitecore.Huebee.config
@@ -1,5 +1,10 @@
 <configuration xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:set="http://www.sitecore.net/xmlconfig/set/">
   <sitecore>
+    <huebee hues="6" hue0="0" shades="7" saturations="3" notation="shortHex" type="Sitecore.Huebee.Models.HuebeeConfiguration, Sitecore.Huebee">
+      <customColors hint="raw:AddCustomColors">
+        <color code="#cc0000" />
+      </customColors>
+    </huebee>
     <pipelines>
       <renderContentEditor>
         <processor patch:before="*[1]" type="Sitecore.Huebee.Pipelines.RenderContentEditor.LoadContentEditorAssets, Sitecore.Huebee" />
