--- a/src/Sitecore.Huebee.csproj
+++ b/src/Sitecore.Huebee.csproj
@@ -135,7 +135,11 @@
     <None Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Factories\HuebeeConfigurationFactory.cs" />
     <Compile Include="Fields\ColorPickerField.cs" />
+    <Compile Include="Models\CustomColor.cs" />
+    <Compile Include="Models\HuebeeConfiguration.cs" />
+    <Compile Include="Models\IHuebeeConfiguration.cs" />
     <Compile Include="Pipelines\RenderContentEditor\LoadContentEditorAssets.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
