feat(Configuration): add method to generate options from configuration
Closes #3

--- a/src/App_Config/Include/Sitecore.Huebee.config
+++ b/src/App_Config/Include/Sitecore.Huebee.config
@@ -1,8 +1,15 @@
 <configuration xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:set="http://www.sitecore.net/xmlconfig/set/">
   <sitecore>
-    <huebee hues="6" hue0="0" shades="7" saturations="3" notation="shortHex" type="Sitecore.Huebee.Models.HuebeeConfiguration, Sitecore.Huebee">
+    <huebee hint="raw:AddOptions" type="Sitecore.Huebee.Models.HuebeeConfiguration, Sitecore.Huebee">
+      <hues>1</hues>
+      <hue0>0</hue0>
+      <shades>0</shades>
+      <saturations>0</saturations>
+      <notation>shortHex</notation>
       <customColors hint="raw:AddCustomColors">
         <color code="#cc0000" />
+        <color code="#333333" />
+        <color code="#FFC31F" />
       </customColors>
     </huebee>
     <pipelines>
