feat(Sites): add configuration of color picker per site
Add configuration to allow the feature to be enabled or disabled
Add logic to determine site and load appropriate configuration for color picker

Closes #4

--- a/src/App_Config/Include/Sitecore.Huebee.config
+++ b/src/App_Config/Include/Sitecore.Huebee.config
@@ -1,21 +1,35 @@
 <configuration xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:set="http://www.sitecore.net/xmlconfig/set/">
   <sitecore>
     <huebee hint="raw:AddOptions" type="Sitecore.Huebee.Models.HuebeeConfiguration, Sitecore.Huebee">
-      <hues>1</hues>
+      <hues>6</hues>
       <hue0>0</hue0>
-      <shades>0</shades>
-      <saturations>0</saturations>
+      <shades>7</shades>
+      <saturations>3</saturations>
       <notation>shortHex</notation>
       <customColors hint="raw:AddCustomColors">
-        <color code="#cc0000" />
-        <color code="#333333" />
-        <color code="#FFC31F" />
       </customColors>
+      <sites hint="raw:AddSites">
+        <site name="website">
+          <hues>1</hues>
+          <hue0>0</hue0>
+          <shades>0</shades>
+          <saturations>0</saturations>
+          <notation>shortHex</notation>
+          <customColors>
+            <color code="#cc0000" />
+            <color code="#333333" />
+            <color code="#FFC31F" />
+          </customColors>
+        </site>
+      </sites>
     </huebee>
     <pipelines>
       <renderContentEditor>
         <processor patch:before="*[1]" type="Sitecore.Huebee.Pipelines.RenderContentEditor.LoadContentEditorAssets, Sitecore.Huebee" />
       </renderContentEditor>
     </pipelines>
+    <settings>
+      <setting name="Huebee.EnablePerSiteConfiguration" value="true" />
+    </settings>
   </sitecore>
 </configuration>
