--- a/src/Sitecore.Huebee.csproj
+++ b/src/Sitecore.Huebee.csproj
@@ -142,6 +142,8 @@
     <Compile Include="Models\IHuebeeConfiguration.cs" />
     <Compile Include="Pipelines\RenderContentEditor\LoadContentEditorAssets.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ISiteService.cs" />
+    <Compile Include="Services\SiteService.cs" />
   </ItemGroup>
   <ItemGroup />
   <PropertyGroup>
